<resources>
    <string name="app_name">BenDroid</string>
    <string name="action_settings">Settings</string>
    <string name="first_time_info">Welcome to BenDroid! This is an app that gives you unobtrusive custom vibrations at your selected times to help you keep track of the time.</string>
    <string name="first_time_notice">You will only see this screen once. Next time, this app will go straight to the settings pane.</string>
    <string name="ok_label">OK</string>
    <string name="action_about">About</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This app will vibrate at a specified time interval like a grandfather clock. You can set how many times it \"chimes\" and when it does.</string>
    <string name="service_terminated">BenDroid successfully quit</string>
    <string name="vibration_toast">Check the time!</string>
    <string name="stop_menu_title">Stop</string>

    <!--Preferences-->

    <string name="vibration_category">Vibration</string>
    <!--Vibration category-->
    <string name="vibration_intensity">Vibration intensity</string>
    <string name="vibration_intensity_summary">Control how strongly you want your phone to vibrate for each "chime"</string>
    <string name="vibration_frequency">Vibrate once</string>
    <string name="vibration_frequency_summary_off">Vibrations reflect the hour (e.g. 9 chimes for the ninth hour)</string>
    <string name="vibration_frequency_summary_on">Vibrate once at every chime</string>

    <string name="general_category">General</string>
    <!--General category-->
    <string name="military_time">Use military time</string>
    <string name="military_time_summary_off">Differentiate between A.M. and P.M.</string>
    <string name="military_time_summary_on">Do not differentiate between A.M. and P.M.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="exact_pref_title">Exact timing</string>
    <string name="exact_pref_summary_on">Vibrate exactly at time interval</string>
    <string name="exact_pref_summary_off">Vibrate approximately at time interval (saves some battery, uses less resources)</string>
    <string name="notification_pref_summary_on">Send a status bar notification with each vibration</string>
    <string name="notification_pref_summary_off">Do not a status bar notification with each vibration</string>
    <string name="notification_pref_title">Status bar notifications</string>
    <string name="service_on_summary">BenDroid is running and will send notifications with the preferences set</string>
    <string name="service_off_summary">BenDroid is not running and will not send vibrations or notifications</string>
    <string name="sp_title">Enable notifications</string>
    <string name="quit_notifications">Stop</string>

    <string name="interval_pref_title">Chime interval</string>
    <string name="interval_pref_summary">Choose how much time will be present in between chimes</string>
    <string-array name="interval_pref_choices">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
    </string-array>

    <string-array name="interval_pref_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
    </string-array>

    <string-array name="interval_unit_choices">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <string name="notification_category">Notifications</string>
    <!--Notification category-->
    <string name="app_category">Application</string>
    <string name="notification_sound_title">Notification sound</string>
    <string name="notification_sound_summary_on">Play sound with chime</string>
    <string name="notification_sound_summary_off">Do not play sound with chime</string>
    <string name="led_title">Notification light</string>
    <string name="led_summary_on">Notification LED will blink with chime</string>
    <string name="led_summary_off">Notification LED will not blink with chime</string>
    <string name="vibrate_title">Vibrate on notification</string>
    <string name="vibrate_summary_on">Vibrate with chime</string>
    <string name="vibrate_summary_off">Do not vibrate with chime</string>

    <!--Status bar notification-->
    <string name="action_set">Set</string>
    <string name="action_cancel">Cancel</string>

    <!--Preference keys-->
    <string name="key_military_time_pref">military_time_pref</string>
    <string name="key_exact_time_pref">exact_time_pref</string>
    <string name="key_interval_pref">interval_pref</string>
    <string name="key_send_notification">send_notification</string>
    <string name="key_notification_sound_present">notification_sound_preference</string>
    <string name="key_led_enabled">led_enabled</string>
    <string name="key_vibrate_notification">vibrate_notification</string>
    <string name="key_vibration_pref">vibration_pref</string>
    <string name="key_vibration_frequency_pref">vibration_frequency_pref</string>

    <string name="vibration_unit">ms</string>
</resources>